--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/ravinodesousa/autocomplete_test_express_js#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "zod": "^3.23.8"
   }
